# EKSClusterSwitcher

./: LICENSE  Pipfile  README.md  pyproject.toml
eks_switcher/: __init__.py  __main__.py  aws_config.py  aws_eks.py  kube_config.py  main.py
eks_switcher/files/: config.jinja2
tests/: test_aws_config.py  test_aws_eks.py
tests/files/: config  config_no_role  sample_cluster.json
